CPG-DEV/src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Cargill Lead Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Converted</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Nurturing</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Business__c</fullName>
        <globalPicklist>CargillBusiness</globalPicklist>
        <label>Business</label>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Consent_Expiration_Date__c</fullName>
        <defaultValue>TODAY()+180</defaultValue>
        <label>Consent Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Distributor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lead Account is serviced by a Cargill Distributor Account.</description>
        <inlineHelpText>Lead Account is serviced by a Cargill Distributor Account.</inlineHelpText>
        <label>Distributor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.isDistributor__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads (Account)</relationshipLabel>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_Opt_In__c</fullName>
        <label>Email Opt-In</label>
        <picklist>
            <picklistValues>
                <fullName>Opt-Out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expressed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Enterprise__c</fullName>
        <globalPicklist>Cargill_Enterprise</globalPicklist>
        <label>Enterprise</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <globalPicklist>Cargill_Group</globalPicklist>
        <label>Group</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LanguagePreference__c</fullName>
        <description>Language Preference for marketing campaigns or product information requests.</description>
        <globalPicklist>Language</globalPicklist>
        <inlineHelpText>Language Preference for marketing campaigns or product information requests.</inlineHelpText>
        <label>Language Preference</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LeadConversionFlag__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Checkbox will default &quot;TRUE&quot;. This will be mapped to Opportunity checkbox and Opportunity creation will be restricted during lead conversion.</description>
        <label>Lead Conversion Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeadDisqualificationReason__c</fullName>
        <label>Lead Disqualification Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Minimum Order Quality Not Met</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Ideation Stage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forwarded to Other Cargill Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cargill Does Not Supply Ingredient</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forwarded to Distributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inquiry Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LeadSource__c</fullName>
        <globalPicklist>Lead_Source</globalPicklist>
        <label>Lead Source</label>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>LegacyRecordID__c</fullName>
        <label>Legacy Record ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Channel__c</fullName>
        <label>Market Channel</label>
        <picklist>
            <picklistValues>
                <fullName>Retail Channel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Protein Ingredients</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Growth Ventures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PartnerAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductInterest__c</fullName>
        <label>Product Interest</label>
        <picklist>
            <picklistValues>
                <fullName>BULK GRINDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BY PRODUCTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CASE READY GRINDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CASE READY MUSCLE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COOKED (CONTINUOUS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIDES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MUSCLE MEAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTHER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RENDERED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRIM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VALUE ADD GRINDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VARIETY MEAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACIDULANTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BUTTER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHOCOLATE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COMPOUND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CORE SYSTEMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CORN SYRUP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMULSIFIER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HFCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIGH INTENSITY SWEETENER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HYDROCOLLOIDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LIQUOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAIZE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MALT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MASA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NUTRITIONALS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POLYOLS &amp; DEXTROSE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POWDER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PROTEIN</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Ready_to_Contact__c</fullName>
        <formula>IF(AND(Country =&apos;Canada&apos;, Consent_Expiration_Date__c&gt;=TODAY(),OR(  ISPICKVAL(Email_Opt_In__c,&apos;Expressed&apos;), ISPICKVAL( Email_Opt_In__c ,&apos;Implied&apos;))),TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ready to Contact</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <recordTypes>
        <fullName>Cargill_Lead</fullName>
        <active>true</active>
        <businessProcess>Cargill Lead Process</businessProcess>
        <label>Cargill Lead</label>
    </recordTypes>
    <recordTypes>
        <fullName>Qualified_Lead</fullName>
        <active>true</active>
        <businessProcess>Cargill Lead Process</businessProcess>
        <label>Qualified Lead</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <validationRules>
        <fullName>Identify_Distributor</fullName>
        <active>true</active>
        <description>If the Lead Disqualification Reason = &apos;Forwarded to Distibutor&quot;, require the Distributor Lookup field to be populated.</description>
        <errorConditionFormula>AND(
   ISPICKVAL( LeadDisqualificationReason__c , &quot;Forwarded to Distributor&quot;),
   ISBLANK(  Distributor__c )
   )</errorConditionFormula>
        <errorDisplayField>Distributor__c</errorDisplayField>
        <errorMessage>Lead Validation Error: Distributor REQUIRED when Lead Disqualification Status = &apos;Forwarded to Distributor&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lead_Conversion_Required_Field_Business</fullName>
        <active>false</active>
        <description>Require the following fields to qualify for Lead Conversion</description>
        <errorConditionFormula>AND(
    ISBLANK( Business__c ),
    ISPICKVAL(Status, &quot;Qualified&quot;)
   )</errorConditionFormula>
        <errorDisplayField>Business__c</errorDisplayField>
        <errorMessage>Lead Conversion Validation Error: BUSINESS is required to be able to Qualify a Lead for CONVERT.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lead_Conversion_Required_Field_Country</fullName>
        <active>true</active>
        <description>Require the following fields to qualify for Lead Conversion</description>
        <errorConditionFormula>AND(
    ISBLANK(  Country  ),
    ISPICKVAL(Status, &quot;Qualified&quot;)
    )</errorConditionFormula>
        <errorDisplayField>Country</errorDisplayField>
        <errorMessage>Lead Conversion Validation Error: COUNTRY is required to be able to Qualify a Lead to CONVERT.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lead_Conversion_Required_Field_Email</fullName>
        <active>true</active>
        <description>Require the following fields to qualify for Lead Conversion</description>
        <errorConditionFormula>AND( 
    ISBLANK( Email ),
    OR(ISPICKVAL(Status, &quot;Qualified&quot;),ISPICKVAL(Status, &quot;New&quot;))

    )</errorConditionFormula>
        <errorDisplayField>Email</errorDisplayField>
        <errorMessage>Lead Conversion Validation Error: EMAIL is required to be able to Qualify a LEAD to CONVERT.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lead_Conversion_Required_Field_FirstName</fullName>
        <active>true</active>
        <description>Require the following fields to qualify for Lead Conversion</description>
        <errorConditionFormula>AND(
    ISBLANK( FirstName ),
    ISPICKVAL(Status, &quot;Qualified&quot;)
    )</errorConditionFormula>
        <errorDisplayField>FirstName</errorDisplayField>
        <errorMessage>Lead Conversion Validation Error: FIRST NAME required to be able to Qualify a Lead to CONVERT.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lead_Conversion_Required_Field_LeadSourc</fullName>
        <active>false</active>
        <description>Require the following fields to qualify for Lead Conversion</description>
        <errorConditionFormula>AND( 
    ISPICKVAL(  LeadSource,&apos;&apos;  ),
    ISPICKVAL(Status, &quot;Qualified&quot;)
    )</errorConditionFormula>
        <errorMessage>Lead Conversion Validation Error: LEAD SOURCE is required to be able to Qualify a Lead to CONVERT.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lead_Conversion_Required_Field_MktChannl</fullName>
        <active>true</active>
        <description>Require the following fields to qualify for Lead Conversion</description>
        <errorConditionFormula>AND( 
    ISPICKVAL(  Market_Channel__c,&apos;&apos; ),
    ISPICKVAL(Status, &quot;Qualified&quot;)
    )</errorConditionFormula>
        <errorMessage>Lead Conversion Validation Error: MARKET CHANNEL is required to be able to Qualify a Lead to CONVERT.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lead_Conversion_Required_Field_Phone</fullName>
        <active>true</active>
        <description>Require the following fields to qualify for Lead Conversion</description>
        <errorConditionFormula>AND(
   ISBLANK( Phone ),
   ISPICKVAL(Status, &quot;Qualified&quot;)
   )</errorConditionFormula>
        <errorDisplayField>Phone</errorDisplayField>
        <errorMessage>Lead Conversion Validation Error: PHONE required to be able to Qualify a Lead to CONVERT.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lead_Disqualification_Reason_Required</fullName>
        <active>true</active>
        <description>Lead Disqualification Reason required when Lead Status = &quot;Unqualified&quot;.</description>
        <errorConditionFormula>OR(
AND(
   ISPICKVAL(Status, &quot;Unqualified&quot;),
   ISBLANK(TEXT(LeadDisqualificationReason__c))
   ),
AND(
    NOT(ISBLANK(TEXT(LeadDisqualificationReason__c))),
  NOT(ISPICKVAL(Status, &quot;Unqualified&quot;))
)
)</errorConditionFormula>
        <errorDisplayField>LeadDisqualificationReason__c</errorDisplayField>
        <errorMessage>Lead Validation Error: Lead Disqualification Reason required when Lead Status = &quot;Unqualified&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lead_Unqualified_Status_for_Distributor</fullName>
        <active>true</active>
        <description>Require that Lead Status = Unqualified to be able to populate the Distributor__c field to assign Lead to Distributor Account.</description>
        <errorConditionFormula>OR(AND(ISPICKVAL(LeadDisqualificationReason__c ,&quot;Forwarded to Distributor&quot;),ISBLANK( Distributor__c)),
AND(NOT(ISBLANK(Distributor__c)),NOT(ISPICKVAL(LeadDisqualificationReason__c ,&quot;Forwarded to Distributor&quot;))))</errorConditionFormula>
        <errorMessage>Lead Validation Error:  Lead can only be assigned to Distributor Account if Lead Disqualification Reason = &quot;Forwarded to Distributor&quot;.</errorMessage>
    </validationRules>
</CustomObject>